temper-modules/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temper-modules
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: temper-modules-dev.dohrm.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: temper-modules
                port:
                  name: http
